# beanaries

./: .editorconfig  .flake8  .gitignore  ADDING_PROJECTS.md  IMPROVEMENTS.md  PRODUCTION_READY.md  QUICKSTART.md  docker-compose.yml  next_up.md  package.json  pnpm-lock.yaml  projects.csv  pyrightconfig.json  turbo.json
.claude/: settings.local.json
apps/backend/: .env.example  .flake8  .gitignore  LUCI_COMMIT_VALIDATION.md  README.md  add_simple_project.py  alembic.ini  backfill_chromium_commit_messages_git.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 655d9abf5c46_add_custom_scraper_support.py  771d37edb1cc_add_index_on_builds_project_commit_.py  80d458ac424c_add_source_download_support.py  837b00fa3a09_add_obs_config_table.py  99bc8106fd3d_rename_chromium_luci_to_luci.py  adc65fcc95bc_add_subproject_path_to_projects.py  b9a94fff292b_add_gitlab_ci_data_source.py  ba7d1f8b9d0a_add_performance_indexes.py  d5a864ef89c2_add_koji_config_table.py  dabed781b44c_refactor_config_tables_normalize_.py
apps/backend/src/: auth.py  cache.py  cli.py  config.py  database.py  logging_config.py  main.py  models.py  scheduler.py  schemas.py  scraper_utils.py
apps/backend/src/api/: builds.py  configs.py  leaderboard.py  projects.py  scheduler.py
apps/backend/src/cli/: __init__.py  backfill_commits.py  scrape.py  update_stars.py
apps/backend/src/scrapers/: __init__.py  buildkite.py  chromium_luci.py  fedora_koji.py  github_actions.py  gitlab_ci.py  local_builder.py  luci.py  opensuse_obs.py
apps/web/: README.md  (+4 more)
scripts/: dev.sh  setup.sh
(+13 files in other folders)
